<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="battery">Battery</string>
    <string name="volume">Volume</string>
    <string name="mute">Mute</string>
    <string name="mode">Mode</string>
    <string name="continuous">Continuous</string>
    <string name="intermittent">Intermittent</string>
    <string name="playback">Playback</string>
    <string name="properties">Properties</string>
    <string name="pitch">Pitch</string>
    <string name="bpm">BPM</string>
    <string name="save">Save</string>
    <string name="stream1">Stream 1</string>
    <string name="stream2">Stream 2</string>
    <string name="scan">Scan for ABBI devices</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_continuous">Continuous Sound</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intermittent">Intermittent Sound</string>
    <string name="title_activity_playback">Playback Sound</string>

    <string name="about"><![CDATA[
                                <p><a href="https://www.abbiproject.eu/">www.abbiproject.eu</a></p>

                                <i>An Android application used to control the ABBI bracelet developed by IIT
                                 (Italian Institute of Technology). The project will follow the client-server software development paradigm.
                                  The server is going to be tied to a central data store and communicate with the Android app via a REST API.</i>]]></string>
    <string name="menu_info">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="close">Close</string>

</resources>
