<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutInfo">

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textSize="18sp"
                android:visibility="visible" />
            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data"
                android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView android:id="@+id/data_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/secondView"
        android:gravity="center"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center_horizontal">


            <ProgressBar
                android:gravity="center"
                android:id="@+id/progressBar"
                android:layout_width="250dp"
                android:layout_height="250dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:indeterminate="false"
                android:progress="100"
                android:max="100"
                android:secondaryProgress="100"
                android:progressDrawable="@drawable/progress_bar"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="@string/battery"
                android:gravity="center"
                android:layout_alignBottom="@id/progressBar"
                android:layout_alignLeft="@id/progressBar"
                android:layout_alignRight="@id/progressBar"
                android:layout_alignTop="@id/progressBar"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:id="@+id/PBtextView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />



            <Switch
                android:width="200dp"
                android:textOn="Sound On"
                android:textOff="Sound Off"
                android:thumb="@drawable/thumb"
                android:track="@drawable/track"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:id="@+id/soundOnOffSwitch"
                android:minHeight="120dp"
                android:checked="false"
                android:layout_below="@+id/progressBar"
                android:layout_centerHorizontal="true"/>

            <Switch
                android:width="200dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:textOff="Mute Off"
                android:textOn="Mute On"
                android:thumb="@drawable/thumb"
                android:track="@drawable/track"
                android:id="@+id/muteSwitch"
                android:checked="false"
                android:layout_below="@+id/progressBar"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>



    </LinearLayout>

    <View
        android:id="@+id/secondView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/thirdLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/secondView"
        android:gravity="center"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayoutVolume"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <proj.abbi.CircularSeekBar
                        android:id="@+id/seekBarVol"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:max="15"
                        android:progress="1"
                        android:fitsSystemWindows="true"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:id="@+id/textViewVol"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_alignBottom="@id/seekBarVol"
                        android:layout_alignLeft="@id/seekBarVol"
                        android:layout_alignRight="@id/seekBarVol"
                        android:layout_alignTop="@id/seekBarVol"
                        android:background="#00000000"
                        android:gravity="center"
                        android:text="@string/volume"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/linearLayoutAudioMode"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/linearLayoutVolume"
                android:layout_alignParentStart="false"
                android:gravity="center">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/radioGroup1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/continuous"
                        android:id="@+id/radioSoundContinuous" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intermittent"
                        android:id="@+id/radioSoundIntermmitent" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/playback"
                        android:id="@+id/radioSoundPlayback" />
                </RadioGroup>
                <Button
                    android:text="@string/properties"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/buttonSoundProperties"
                    android:background="@drawable/custom_button"
                    android:textColor="#fff"/>


            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>





